<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    android:background="@drawable/edit_text_style">

    <ImageView
        android:id="@+id/toDoItemIcon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/not_done"
        android:src="@drawable/not_done_mark" />

    <TextView
        android:id="@+id/toDoItemDate"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/toDoItemIcon"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:text="@string/date"
        android:textSize="12sp"
        android:textColor="@color/normalTextColor"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/toDoItemTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/toDoItemDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/toDoItemIcon"
        android:gravity="center_vertical"
        android:text="@string/title"
        android:textSize="16sp"
        android:textColor="@color/normalTextColor" />

</RelativeLayout>