<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.todoapp.activity.AddToDoActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/normalTextColor"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:fontFamily="Tahoma"
        android:textSize="26sp"
        android:gravity="center"
        android:textColor="@color/normalTextColor"
        android:background="@drawable/edit_text_style"
        android:textStyle="normal"
        android:padding="8dp" />

    <TextView
        android:id="@+id/description_text_view"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/normalTextColor"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:fontFamily="Tahoma"
        android:textSize="16sp"
        android:textColor="@color/normalTextColor"
        android:background="@drawable/edit_text_style"
        android:textStyle="normal"
        android:padding="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/markAsDoneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mark_as_done"
                android:textAlignment="center"
                android:textColor="@color/normalTextColor"
                android:background="@color/colorMarkAsDone"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/markAsNotDoneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mark_as_not_done"
                android:textAlignment="center"
                android:textColor="@color/normalTextColor"
                android:background="@color/colorMarkAsNotDone"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/normalTextColor"
                android:background="@color/colorErrorDark"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
