<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_to_do"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.todoapp.activity.AddToDoActivity">

    <EditText
        android:id="@+id/new_to_do_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textCursorDrawable="@null"
        android:text="@string/title_placeholder"
        android:fontFamily="Tahoma"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textColor="@color/colorPlaceholder"
        android:background="@drawable/edit_text_style"
        android:textStyle="italic"
        android:padding="8dp" />

    <EditText
        android:id="@+id/new_to_do_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:text="@string/description_placeholder"
        android:fontFamily="Tahoma"
        android:textSize="16sp"
        android:textColor="@color/colorPlaceholder"
        android:background="@drawable/edit_text_style"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@color/colorSuccessDark"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />
</LinearLayout>
